GoalTracker/force-app/main/default/objects/Prospect_Rating__c/Prospect_Rating__c.object-meta.xml
<CustomObject>
    <description>AQ_Custom</description>
    <label>Prospect Rating</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Prospect Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>