GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AQ_Custom (BP)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospect Ratings</relationshipLabel>
    <relationshipName>Prospect_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>