GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>AQ_Custom(BP)</description>
    <formula>IF ( ISBLANK ( Start_Date__c) 
, IF ( ISBLANK ( End_Date__c)
, TRUE
, IF ( End_Date__c&gt; TODAY(), TRUE, FALSE) 
)
, IF ( Start_Date__c &lt;= TODAY()
, IF (ISBLANK ( End_Date__c)
, TRUE
, IF (End_Date__c &gt; TODAY(), TRUE, FALSE))
, FALSE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>