GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Count__c</fullName>
    <description>Catches the Active Indicator in a numeric field so the Account Roll-up Summary field can use it.  Hidden field, do not add to page layout.</description>
    <inlineHelpText>Catches the Active Indicator in a numeric field so the Account Roll-up Summary field can use it.  Hidden field, do not add to page layout.</inlineHelpText>
    <label>Active Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>