GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Adv_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Adv_Last_Modified_By__c</fullName>
    <description>AQ_custom</description>
    <inlineHelpText>Legacy Last Modified By</inlineHelpText>
    <label>Adv Last Modified By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>