GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Adv_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Adv_Last_Modified_Date__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Legacy Last Modified Date</inlineHelpText>
    <label>Adv Last Modified Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>