GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Campaign_Target__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Target__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>The Campaign target represents the comprehensive asks of the prospect over a Campaign(typically 10 year) period.</inlineHelpText>
    <label>Campaign Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>