GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Capacity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Rating__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Capacity is defined as having an ability to give $10K or more over a five year period. Also Capacity can be defined as having &quot;zero&quot; capacity and thus not being a prospect. Or identifying them as being in Long Term or PG stewardship.</inlineHelpText>
    <label>Capacity Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0 (Not a Prospect)</fullName>
            </value>
            <value>
                <fullName>$10,000-24,999</fullName>
            </value>
            <value>
                <fullName>$25,000-49,999</fullName>
            </value>
            <value>
                <fullName>$50,000-99,999</fullName>
            </value>
            <value>
                <fullName>$100,000-249,999</fullName>
            </value>
            <value>
                <fullName>$250,000-499,999</fullName>
            </value>
            <value>
                <fullName>$500,000-999,999</fullName>
            </value>
            <value>
                <fullName>$1,000,000-2,499,999</fullName>
            </value>
            <value>
                <fullName>$2,500,000-4,999,999</fullName>
            </value>
            <value>
                <fullName>$5,000,000-9,999,999</fullName>
            </value>
            <value>
                <fullName>$10,000,000-24,999,999</fullName>
            </value>
            <value>
                <fullName>$25,000,000-49,999,999</fullName>
            </value>
            <value>
                <fullName>$50,000,000-99,999,999</fullName>
            </value>
            <value>
                <fullName>$100,000,000+</fullName>
            </value>
            <value>
                <fullName>Long Term Stewardship</fullName>
            </value>
            <value>
                <fullName>PG Stewardship</fullName>
            </value>
            <value>
                <fullName>VIP Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>