GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Capacity_Tier_Minimum_Value__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Tier_Minimum_Value__c</fullName>
    <formula>CASE(Capacity_Rating__c, 
&apos;$10,000-24,999&apos;, 10000, 
&apos;$25,000-49,999&apos;, 25000,
&apos;$50,000-99,999&apos;, 50000,
&apos;$100,000-249,999&apos;, 100000,
&apos;$250,000-499,999&apos;, 250000,
&apos;$500,000-999,999&apos;, 500000,
&apos;$1,000,000-2,499,999&apos;, 1000000,
&apos;$2,500,000-4,999,999&apos;, 2500000,
&apos;$5,000,000-9,999,999&apos;, 5000000,
&apos;$10,000,000-24,999,999&apos;, 10000000,
&apos;$25,000,000-49,999,999&apos;, 25000000,
&apos;$50,000,000-99,999,999&apos;, 50000000,
&apos;$100,000,000+&apos;, 100000000,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Tier Minimum Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>