GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Central_vs_School__c.field-meta.xml
<CustomField>
    <fullName>Central_vs_School__c</fullName>
    <description>Prospect Manager that owns this Opportunity is affiliated with either Central Advancement or a School Development group (Hidden field for reporting)</description>
    <formula>TEXT ( Qualification_Credit__r.Central_Vs_School__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prospect Manager that owns this Opportunity is affiliated with either Central Advancement or a School Development group (Hidden field for reporting)</inlineHelpText>
    <label>Central vs School</label>
    <type>Text</type>
</CustomField>