GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Continuity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Continuity_Rating__c</fullName>
    <label>Continuity Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>