GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Conversion_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Unique_Id__c</fullName>
    <description>AQB Custom</description>
    <label>Conversion Unique Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>