GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Corp_Non_Gift_Rating__c.field-meta.xml
<CustomField>
    <fullName>Corp_Non_Gift_Rating__c</fullName>
    <description>AQ_Custom</description>
    <label>Corp Non Gift Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$10,000-$24,999</fullName>
            </value>
            <value>
                <fullName>$25,000-49,999</fullName>
            </value>
            <value>
                <fullName>$50,000-99,999</fullName>
            </value>
            <value>
                <fullName>$100,000-249,000</fullName>
            </value>
            <value>
                <fullName>$250,000-499,999</fullName>
            </value>
            <value>
                <fullName>$500,000-999,999</fullName>
            </value>
            <value>
                <fullName>$1,000,000-2,499,999</fullName>
            </value>
            <value>
                <fullName>$2,500,000-4,999,999</fullName>
            </value>
            <value>
                <fullName>$5,000,000-9,999,999</fullName>
            </value>
            <value>
                <fullName>$10,000,000-24,999,999</fullName>
            </value>
            <value>
                <fullName>$25,000,000-49,999,999</fullName>
            </value>
            <value>
                <fullName>$50,000,000-99,999,999</fullName>
            </value>
            <value>
                <fullName>$100,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>