GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Donor_Compass_Grade__c.field-meta.xml
<CustomField>
    <fullName>Donor_Compass_Grade__c</fullName>
    <description>Low, medium, or high scores are based on an analysis of the donors propensity to make an estate gift.</description>
    <formula>IF(Donor_Compass_Score__c &gt;= 25, &quot;High&quot;,
  IF(Donor_Compass_Score__c &gt;= 17, &quot;Medium&quot;, &quot;Low&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Low, medium, or high scores are based on an analysis of the donors propensity to make an estate gift.</inlineHelpText>
    <label>Donor Compass Grade</label>
    <type>Text</type>
</CustomField>