GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Donor_Compass_Score__c.field-meta.xml
<CustomField>
    <fullName>Donor_Compass_Score__c</fullName>
    <label>Donor Compass Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>