GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Donor_Compass_Status__c.field-meta.xml
<CustomField>
    <fullName>Donor_Compass_Status__c</fullName>
    <label>Donor Compass Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>