GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>AQ_Custom(BP)</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>