GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month__c</fullName>
    <formula>CASE(MONTH( Start_Date__c  ), 
1,7, 
2,8,
3,9,
4,10,
5,11,
6,12,
7,1,
8,2,
9,3,
10,4,
11,5,
12,6,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>