GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Fiscal_Month_Sort__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month_Sort__c</fullName>
    <formula>CASE(MONTH( Start_Date__c ),
1,&quot;07 January&quot;,
2,&quot;08 February&quot;,
3,&quot;09 March&quot;,
4,&quot;10 April&quot;,
5,&quot;11 May&quot;,
6,&quot;12 June&quot;,
7,&quot;01 July&quot;,
8,&quot;02 August&quot;,
9,&quot;03 September&quot;,
10,&quot;04 October&quot;,
11,&quot;05 November&quot;,
12,&quot;06 December&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Month Sort</label>
    <type>Text</type>
</CustomField>