GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF( (MONTH(Start_Date__c ) &gt;= 7 &amp;&amp; MONTH(Start_Date__c ) &lt;= 12),
TEXT(YEAR(Start_Date__c)+1), TEXT(YEAR(Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>