GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Goal_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Goal_Fiscal__c</fullName>
    <description>Hidden field for temporarily passing the Fiscal year of the Goal</description>
    <inlineHelpText>Hidden field for temporarily passing the Fiscal year of the Goal</inlineHelpText>
    <label>Goal Fiscal</label>
    <length>4</length>
    <type>Text</type>
</CustomField>