GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Goal_Link__c.field-meta.xml
<CustomField>
    <fullName>Goal_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id,  Account__r.Account_Name_Link__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Link</label>
    <type>Text</type>
</CustomField>