GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Last_Process_Builder_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Process_Builder_Update__c</fullName>
    <description>Catches the time of the last update from Process Builder Goal apps</description>
    <inlineHelpText>Catches the time of the last update from Process Builder Goal apps</inlineHelpText>
    <label>Last Process Builder Update</label>
    <type>DateTime</type>
</CustomField>