GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Manually_Entered_Value__c.field-meta.xml
<CustomField>
    <fullName>Manually_Entered_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQB Custom</description>
    <label>Manually Entered Value</label>
    <type>Checkbox</type>
</CustomField>