GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Mass_Update__c.field-meta.xml
<CustomField>
    <fullName>Mass_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Update</label>
    <type>Checkbox</type>
</CustomField>