GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Month_Rated__c.field-meta.xml
<CustomField>
    <fullName>Month_Rated__c</fullName>
    <formula>CASE(MONTH( Start_Date__c  ), 
1, &quot;January&quot;, 
2,&quot;February&quot;,
3,&quot;March&quot;,
4,&quot;April&quot;,
5,&quot;May&quot;,
6,&quot;June&quot;,
7,&quot;July&quot;,
8,&quot;August&quot;,
9,&quot;September&quot;,
10,&quot;October&quot;,
11,&quot;November&quot;,
12,&quot;December&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Rated</label>
    <type>Text</type>
</CustomField>