GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Number_of_Prospect_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Prospect_Ratings__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Prospect Ratings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>