GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Planned_Gift_Potential__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift_Potential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <label>Planned Gift Potential</label>
    <type>Checkbox</type>
</CustomField>