GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/PM_Group__c.field-meta.xml
<CustomField>
    <fullName>PM_Group__c</fullName>
    <description>PM Group of the Prospect Manager that owns this Opportunity (Hidden field for Reporting)</description>
    <formula>TEXT( Qualification_Credit__r.PM_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PM Group of the Prospect Manager that owns this Opportunity (Hidden field for Reporting)</inlineHelpText>
    <label>PM Group</label>
    <type>Text</type>
</CustomField>