GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/PM_Team__c.field-meta.xml
<CustomField>
    <fullName>PM_Team__c</fullName>
    <description>Team of the Prospect Manager that owns this Opportunity (Hidden field for Reporting)</description>
    <formula>TEXT( Qualification_Credit__r.PM_Team__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Team of the Prospect Manager that owns this Opportunity (Hidden field for Reporting)</inlineHelpText>
    <label>PM Team</label>
    <type>Text</type>
</CustomField>