GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/PR_User_Id__c.field-meta.xml
<CustomField>
    <fullName>PR_User_Id__c</fullName>
    <formula>Qualification_Credit__r.ID_18_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR User Id</label>
    <type>Text</type>
</CustomField>