GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Prospect_Source__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Source__c</fullName>
    <description>AQ_Custom</description>
    <label>Prospect Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lexis Nexis</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Patent Listing</fullName>
            </value>
            <value>
                <fullName>Data Mining - Velocity</fullName>
            </value>
            <value>
                <fullName>Data Mining</fullName>
            </value>
            <value>
                <fullName>Wealthy Americans</fullName>
            </value>
            <value>
                <fullName>Wealthy ZIP Codes</fullName>
            </value>
            <value>
                <fullName>Who&apos;s Who</fullName>
            </value>
            <value>
                <fullName>World Wide Web</fullName>
            </value>
            <value>
                <fullName>LinkedIn Research</fullName>
            </value>
            <value>
                <fullName>Consistent Donor Minimum Lifetime Giving</fullName>
            </value>
            <value>
                <fullName>WealthX</fullName>
            </value>
            <value>
                <fullName>GSIA</fullName>
            </value>
            <value>
                <fullName>Wealth Engine</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Wealth Tracker</fullName>
            </value>
            <value>
                <fullName>Gift Batch Sheets</fullName>
            </value>
            <value>
                <fullName>SEC Alert</fullName>
            </value>
            <value>
                <fullName>Social Register</fullName>
            </value>
            <value>
                <fullName>S &amp; P Executive Search</fullName>
            </value>
            <value>
                <fullName>PG Faculty Project</fullName>
            </value>
            <value>
                <fullName>Alumnus</fullName>
            </value>
            <value>
                <fullName>Development Research</fullName>
            </value>
            <value>
                <fullName>Wizard</fullName>
            </value>
            <value>
                <fullName>Regional Search</fullName>
            </value>
            <value>
                <fullName>Venture Capitalists Book</fullName>
            </value>
            <value>
                <fullName>Internet Movie database</fullName>
            </value>
            <value>
                <fullName>InvestNet</fullName>
            </value>
            <value>
                <fullName>PIN Research Screening</fullName>
            </value>
            <value>
                <fullName>Data Mining - Reeher Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>