GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Qualification_Credit__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <inlineHelpText>Look up field to select who is the user to receive credit.</inlineHelpText>
    <label>Qualification Credit</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospect_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>