GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Qualification_Credit_User_Test__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Credit_User_Test__c</fullName>
    <formula>Qualification_Credit__r.FirstName &amp; &quot; &quot; &amp;  Qualification_Credit__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualification Credit User Test</label>
    <type>Text</type>
</CustomField>