GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Qualification_Goal__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Goal__c</fullName>
    <description>Qualification Goal of the Prospect Manager who Qualified This Account (Hidden Field)</description>
    <formula>Qualification_Credit__r.Qualification_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qualification Goal of the Prospect Manager who Qualified This Account</inlineHelpText>
    <label>Qualification Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>