GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Rating_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rating_Detail__c</fullName>
    <description>AQ_Custom</description>
    <inlineHelpText>Space to enter detail and further explanation about the Capacity figures and/or Planned Gift potential.</inlineHelpText>
    <label>Rating Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>