GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Reporting_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Name__c</fullName>
    <formula>Qualification_Credit__r.LastName + &apos;, &apos; + Qualification_Credit__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Name</label>
    <type>Text</type>
</CustomField>