GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>AQ_Custom(BP)</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>