GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/System_Managed__c.field-meta.xml
<CustomField>
    <fullName>System_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <inlineHelpText>Indicates that the prospect rating has been classified as one of the records that should be maintained by the system.</inlineHelpText>
    <label>System Managed</label>
    <type>Checkbox</type>
</CustomField>