GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Ten_Year_Rating__c.field-meta.xml
<CustomField>
    <fullName>Ten_Year_Rating__c</fullName>
    <label>Ten Year Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>