GoalTracker/force-app/main/default/objects/Prospect_Rating__c/fields/Two_Year_Rating__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Rating__c</fullName>
    <label>Two Year Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>