GoalTracker/force-app/main/default/objects/Prospect_Rating__c/recordTypes/Campaign_Target.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Target</fullName>
    <active>true</active>
    <description>Estimated amount of Carnegie Mellon gift solicitations for a particular prospect during a university campaign.</description>
    <label>Campaign Target</label>
</RecordType>