GoalTracker/force-app/main/default/objects/Prospect_Rating__c/recordTypes/Capacity_Rating.recordType-meta.xml
<RecordType>
    <fullName>Capacity_Rating</fullName>
    <active>true</active>
    <description>This Capacity Rating is the prospect&apos;s estimated charitable gift capacity over a five year period regardless of recipient organization or level of interest.</description>
    <label>Capacity Rating</label>
</RecordType>