GoalTracker/force-app/main/default/objects/Prospect_Rating__c/recordTypes/CMU_1000.recordType-meta.xml
<RecordType>
    <fullName>CMU_1000</fullName>
    <active>true</active>
    <description>This record type identifies the prospect as meeting the CMU 1000 criteria.</description>
    <label>CMU 1000</label>
</RecordType>