GoalTracker/force-app/main/default/objects/Prospect_Rating__c/recordTypes/Corp_Non_Gift_Rating.recordType-meta.xml
<RecordType>
    <fullName>Corp_Non_Gift_Rating</fullName>
    <active>true</active>
    <description>This rating is for Corporate or Foundation account ratings.</description>
    <label>Corp Non Gift Rating</label>
</RecordType>