GoalTracker/force-app/main/default/objects/Prospect_Rating__c/recordTypes/Donor_Compass_Score.recordType-meta.xml
<RecordType>
    <fullName>Donor_Compass_Score</fullName>
    <active>true</active>
    <description>Houses the Donor Compass Score imported from a materialized view in Advance tables</description>
    <label>Donor Compass Score</label>
</RecordType>