GoalTracker/force-app/main/default/objects/Prospect_Rating__c/recordTypes/Qualification.recordType-meta.xml
<RecordType>
    <fullName>Qualification</fullName>
    <active>true</active>
    <description>This is created when a prospect has been qualified.</description>
    <label>Qualification</label>
</RecordType>