GoalTracker/force-app/main/default/objects/Prospect_Rating__c/listViews/Campaign_Target.listView-meta.xml
<ListView>
    <fullName>Campaign_Target</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Campaign_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prospect_Rating__c.Campaign_Target</value>
    </filters>
    <label>Campaign Target</label>
</ListView>