GoalTracker/force-app/main/default/objects/Prospect_Rating__c/listViews/Capacity.listView-meta.xml
<ListView>
    <fullName>Capacity</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Capacity_Rating__c</columns>
    <columns>Active__c</columns>
    <columns>Active_Count__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prospect_Rating__c.Capacity_Rating</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Capacity</label>
</ListView>