GoalTracker/force-app/main/default/objects/Prospect_Rating__c/listViews/CMU1000.listView-meta.xml
<ListView>
    <fullName>CMU1000</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prospect_Rating__c.CMU_1000</value>
    </filters>
    <label>CMU1000</label>
</ListView>