GoalTracker/force-app/main/default/objects/Prospect_Rating__c/listViews/Corp_Non_Gift.listView-meta.xml
<ListView>
    <fullName>Corp_Non_Gift</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prospect_Rating__c.Corp_Non_Gift_Rating</value>
    </filters>
    <label>Corp Non-Gift</label>
</ListView>