GoalTracker/force-app/main/default/objects/Prospect_Rating__c/listViews/Donor_Compass.listView-meta.xml
<ListView>
    <fullName>Donor_Compass</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Donor_Compass_Grade__c</columns>
    <columns>Donor_Compass_Score__c</columns>
    <columns>Donor_Compass_Status__c</columns>
    <columns>Continuity_Rating__c</columns>
    <columns>Recency_Rating__c</columns>
    <columns>Two_Year_Rating__c</columns>
    <columns>Ten_Year_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prospect_Rating__c.Donor_Compass_Score</value>
    </filters>
    <label>Donor Compass</label>
</ListView>