GoalTracker/force-app/main/default/objects/Prospect_Rating__c/listViews/Qualification.listView-meta.xml
<ListView>
    <fullName>Qualification</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prospect_Rating__c.Qualification</value>
    </filters>
    <label>Qualification</label>
</ListView>